View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027579 | Open CASCADE | OCCT:Visualization | public | 2016-06-08 12:32 | 2016-12-09 16:37 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027579: Visualization, TKOpenGl - skip FSAA flag within Path Tracing | ||||
Description | If both Graphic3d_RenderingParams::IsGlobalIlluminationEnabled and Graphic3d_RenderingParams::IsAntialiasingEnabled are enabled ray-trace program doesn't work after 0027337 (FSAA option is not intended to be used with Path Tracing and would not be useful even if implemented). | ||||
Steps To Reproduce | none | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
related to | 0027337 | closed | [Regression vs. 6.9.1] Selection highlight is poor in ray traced mode with FSAA |
|
Branch CR27579 has been created by isk. SHA-1: d8d29d8fe030cfecaa1b9072e60ff060d18e6606 Detailed log of new commits: Author: isk Date: Wed Jun 8 13:22:20 2016 +0300 0027579: Visualization, Path Tracing - disable antialiasing parameter for path tracing. |
|
Branch CR27579 has been updated forcibly by isk. SHA-1: 7b33b0b1f95fafb103c8ba4b9f2d6e2987774a7b |
|
Branch CR27579 has been updated forcibly by isk. SHA-1: 86ab056e42b096b7e00557c70314eae9afcaa610 |
|
Dear Kirill, Please review the branch CR27579. |
|
Please take the patch, regression testing is not needed. |
|
Dear BugMaster, Branch CR27579 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: 86ab056e42b096b7e00557c70314eae9afcaa610 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 72 (72 on master) Windows: 4 (4 on master) MacOS : 1143 |
|
Dear BugMaster, Branch CR27579 is TESTED. |
|
Branch CR27579 has been deleted by inv. SHA-1: 86ab056e42b096b7e00557c70314eae9afcaa610 |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-06-08 12:32 |
|
New Issue | |
2016-06-08 12:32 |
|
Assigned To | => isk |
2016-06-08 13:24 | git | Note Added: 0054788 | |
2016-06-08 13:26 |
|
Summary | Visualization, Path Tracing - disable antialiasing parameter for path tracing. => Visualization, Path Tracing - disable FSAA for path tracing. |
2016-06-08 13:44 | kgv | Relationship added | related to 0027337 |
2016-06-08 13:44 | kgv | Product Version | => 7.0.0 |
2016-06-08 13:55 | kgv | Summary | Visualization, Path Tracing - disable FSAA for path tracing. => Visualization, TKOpenGl - skip FSAA flag within Path Tracing |
2016-06-08 13:55 | kgv | Description Updated | |
2016-06-08 13:56 | kgv | Description Updated | |
2016-06-08 14:29 |
|
Status | new => assigned |
2016-06-08 14:32 | git | Note Added: 0054795 | |
2016-06-08 14:33 | git | Note Added: 0054796 | |
2016-06-08 14:35 |
|
Note Added: 0054797 | |
2016-06-08 14:35 |
|
Assigned To | isk => kgv |
2016-06-08 14:35 |
|
Status | assigned => resolved |
2016-06-08 14:35 |
|
Steps to Reproduce Updated | |
2016-06-08 14:42 | kgv | Note Added: 0054798 | |
2016-06-08 14:42 | kgv | Assigned To | kgv => bugmaster |
2016-06-08 14:42 | kgv | Severity | minor => trivial |
2016-06-08 14:42 | kgv | Status | resolved => reviewed |
2016-06-08 14:45 |
|
Assigned To | bugmaster => mkv |
2016-06-08 18:18 |
|
Note Added: 0054823 | |
2016-06-08 18:18 |
|
Test case number | => Not needed |
2016-06-08 18:18 |
|
Note Added: 0054824 | |
2016-06-08 18:18 |
|
Assigned To | mkv => bugmaster |
2016-06-08 18:18 |
|
Status | reviewed => tested |
2016-06-10 13:12 | bugmaster | Changeset attached | => occt master 473cddc1 |
2016-06-10 13:12 | bugmaster | Status | tested => verified |
2016-06-10 13:12 | bugmaster | Resolution | open => fixed |
2016-06-17 12:14 | git | Note Added: 0055147 | |
2016-12-09 16:31 |
|
Status | verified => closed |
2016-12-09 16:37 |
|
Fixed in Version | => 7.1.0 |