0027579: Visualization, TKOpenGl - skip FSAA flag within Path Tracing